--- a/index.html
+++ b/index.html
@@ -1,12 +1,365 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+
+	<meta charset="utf-8">
+
+	<title>Title</title>
+	<meta name="description" content="">
+
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+
+	<meta property="og:image" content="path/to/image.jpg">
+	<link rel="shortcut icon" href="img/favicon/favicon.ico" type="image/x-icon">
+	<link rel="apple-touch-icon" href="img/favicon/apple-touch-icon.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="img/favicon/apple-touch-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="img/favicon/apple-touch-icon-114x114.png">
+
+	<!-- Chrome, Firefox OS and Opera -->
+	<meta name="theme-color" content="#000">
+	<!-- Windows Phone -->
+	<meta name="msapplication-navbutton-color" content="#000">
+	<!-- iOS Safari -->
+	<meta name="apple-mobile-web-app-status-bar-style" content="#000">
+
+	<style>
+		body {
+			opacity: 0;
+			overflow-x: hidden;
+		}
+
+		html {
+			background-color: #fff;
+		}
+		/* #first {
+			background: url('./img/fon.jpg');
+			height: 100vh;
+			background-size: cover;
+			background-position: bottom center;
+		} */
+	</style>
+
 </head>
+
 <body>
-    <h1>Hellow World</h1>
+	<section id="first">
+		<div class="container">
+
+			<div class="row">
+
+				<div class="col-sm-8 col-sm-offset-2 col-lg-4">
+					<h1>amazing app<br> best for business</h1>
+					<!-- <img class="img-responsive" src="img/preview.jpg" alt="Start HTML5 Template"> -->
+				</div>
+
+			</div>
+
+		</div>
+	</section>
+	<section id="advantages">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-6">
+
+				</div>
+				<div class="col-md-5 col-ms-offset-1">
+					<div class="advantages_card">
+						<h3 class="title">creative design</h3>
+						<p>But i must explain to you how all this idea of decouncing pleasure and praising pain was born and I will give you a
+							compete account</p>
+					</div>
+					<div class="advantages_card">
+						<h3 class="title">easy to use</h3>
+						<p>But i must explain to you how all this idea of decouncing pleasure and praising pain was born and I will give you a
+							compete account</p>
+					</div>
+					<div class="advantages_card">
+						<h3 class="title">best user experience</h3>
+						<p>But i must explain to you how all this idea of decouncing pleasure and praising pain was born and I will give you a
+							compete account</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section id="future">
+		<div class="container">
+			<div class="row">
+				<h2 class="caption">App Future</h2>
+				<div class="col-md-6 col-md-offset-3">
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis ea debitis tempore veritatis tenetur unde autem odio!
+						Maiores quo, expedita, dolor earum eveniet, libero sed saepe adipisci maxime officia optio.</p>
+				</div>
+			</div>
+
+			<div class="row" style="margin-top: 70px">
+				<div class="col-md-4 col-md-offset-4">
+					<h3>full free chat</h3>
+					<p>But I must explain to you how all this mistaken idea of decouncing pleasure and praicing</p>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section id="price">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-8 col-md-offset-2">
+					<h2 class="caption">Стоимость</h2>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt rem provident libero eius quos quia excepturi incidunt voluptates voluptatem, nisi ea sapiente voluptatum magni voluptatibus rerum, eveniet adipisci quod ab.</p>
+				</div>
+				<div class="clearfix"></div>
+				<div class="col-md-4">
+					<div class="price_card">
+						<h3>Название ??</h3>
+
+						<h4 class="price">99 &euro;</h4>
+
+						<ul>
+							<li>Участие</li>
+							<li>Материалы</li>
+							<li>Ссылки</li>
+						</ul>
+
+						<button class="btn-price">Забронировать</button>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="price_card">
+						<h3>Название ??</h3>
+
+						<h4 class="price">199 &euro;</h4>
+
+						<ul>
+							<li>Участие</li>
+							<li>Материалы</li>
+							<li>Ссылки</li>
+							<li>Курс 100 дней маркетинга</li>
+						</ul>
+
+						<button class="btn-price">Забронировать</button>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="price_card">
+						<h3>Название ??</h3>
+
+						<h4 class="price">299 &euro;</h4>
+
+						<ul>
+							<li>Участие</li>
+							<li>Материалы</li>
+							<li>Ссылки</li>
+							<li>Курс 100 дней маркетинга</li>
+							<li>3 часа консультации</li>
+						</ul>
+
+						<button class="btn-price">Забронировать</button>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section id="team">
+		<div class="container">
+			<div class="row">
+				<div class="col-xs-8 col-xs-offset-2">
+					<h2 class="caption">Our Creative Team</h2>
+					<p class="center">Demoralized by the charms of plasure of the moment, so blinded by desire, that they cannot foresee idea of denouncing
+						pleasure and praising</p>
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="col-md-3">
+					<div class="team_card">
+						<img class="img-responsive" src="http://via.placeholder.com/150x150" alt="">
+						<h3>Name LastName</h3>
+						<p>product designer</p>
+
+						<ul>
+							<li>
+								<span class="fa-stack fa-lg">
+								<i class="fa fa-circle fa-stack-2x"></i>
+								<i class="fa fa-facebook fa-stack-1x"></i>
+							</span>
+							</li>
+							<li>
+								<span class="fa-stack fa-lg">
+								<i class="fa fa-circle fa-stack-2x"></i>
+								<i class="fa fa-twitter fa-stack-1x"></i>
+							</span>
+							</li>
+							<li>
+								<span class="fa-stack fa-lg">
+								<i class="fa fa-circle fa-stack-2x"></i>
+								<i class="fa fa-linkedin fa-stack-1x"></i>
+							</span>
+							</li>
+							<li>
+								<span class="fa-stack fa-lg">
+								<i class="fa fa-circle fa-stack-2x"></i>
+								<i class="fa fa-instagram fa-stack-1x"></i>
+							</span>
+							</li>
+						</ul>
+					</div>
+				</div>
+				<div class="col-md-3">
+					<div class="team_card">
+						<img class="img-responsive" src="http://via.placeholder.com/150x150" alt="">
+						<h3>Name LastName</h3>
+						<p>product designer</p>
+
+						<ul>
+							<li>
+								<span class="fa-stack fa-lg">
+									<i class="fa fa-circle fa-stack-2x"></i>
+									<i class="fa fa-facebook fa-stack-1x"></i>
+								</span>
+							</li>
+							<li>
+								<span class="fa-stack fa-lg">
+									<i class="fa fa-circle fa-stack-2x"></i>
+									<i class="fa fa-twitter fa-stack-1x"></i>
+								</span>
+							</li>
+							<li>
+								<span class="fa-stack fa-lg">
+									<i class="fa fa-circle fa-stack-2x"></i>
+									<i class="fa fa-linkedin fa-stack-1x"></i>
+								</span>
+							</li>
+							<li>
+								<span class="fa-stack fa-lg">
+									<i class="fa fa-circle fa-stack-2x"></i>
+									<i class="fa fa-instagram fa-stack-1x"></i>
+								</span>
+							</li>
+						</ul>
+					</div>
+				</div>
+				<div class="col-md-3">
+					<div class="team_card">
+						<img class="img-responsive" src="http://via.placeholder.com/150x150" alt="">
+						<h3>Name LastName</h3>
+						<p>product designer</p>
+
+						<ul>
+							<li>
+								<span class="fa-stack fa-lg">
+								<i class="fa fa-circle fa-stack-2x"></i>
+								<i class="fa fa-facebook fa-stack-1x"></i>
+							</span>
+							</li>
+							<li>
+								<span class="fa-stack fa-lg">
+								<i class="fa fa-circle fa-stack-2x"></i>
+								<i class="fa fa-twitter fa-stack-1x"></i>
+							</span>
+							</li>
+							<li>
+								<span class="fa-stack fa-lg">
+								<i class="fa fa-circle fa-stack-2x"></i>
+								<i class="fa fa-linkedin fa-stack-1x"></i>
+							</span>
+							</li>
+							<li>
+								<span class="fa-stack fa-lg">
+								<i class="fa fa-circle fa-stack-2x"></i>
+								<i class="fa fa-instagram fa-stack-1x"></i>
+							</span>
+							</li>
+						</ul>
+					</div>
+				</div>
+				<div class="col-md-3">
+					<div class="team_card">
+						<img class="img-responsive" src="http://via.placeholder.com/150x150" alt="">
+						<h3>Name LastName</h3>
+						<p>product designer</p>
+
+						<ul>
+							<li>
+								<span class="fa-stack fa-lg">
+									<i class="fa fa-circle fa-stack-2x"></i>
+									<i class="fa fa-facebook fa-stack-1x"></i>
+								</span>
+							</li>
+							<li>
+								<span class="fa-stack fa-lg">
+									<i class="fa fa-circle fa-stack-2x"></i>
+									<i class="fa fa-twitter fa-stack-1x"></i>
+								</span>
+							</li>
+							<li>
+								<span class="fa-stack fa-lg">
+									<i class="fa fa-circle fa-stack-2x"></i>
+									<i class="fa fa-linkedin fa-stack-1x"></i>
+								</span>
+							</li>
+							<li>
+								<span class="fa-stack fa-lg">
+									<i class="fa fa-circle fa-stack-2x"></i>
+									<i class="fa fa-instagram fa-stac
+									</div>k-1x"></i>
+								</span>
+							</li>
+						</ul>
+					</div>
+					<!-- <div class="col-md-3">
+						<div class="team_card">
+							<img class="img-responsive" src="http://via.placeholder.com/150x150" alt="">
+							<h3>Name LastName</h3>
+							<p>product designer</p>
+
+							<ul>
+								<li>
+									<span class="fa-stack fa-lg">
+								<i class="fa fa-circle fa-stack-2x"></i>
+								<i class="fa fa-facebook fa-stack-1x"></i>
+							</span>
+								</li>
+								<li>
+									<span class="fa-stack fa-lg">
+								<i class="fa fa-circle fa-stack-2x"></i>
+								<i class="fa fa-twitter fa-stack-1x"></i>
+							</span>
+								</li>
+								<li>
+									<span class="fa-stack fa-lg">
+								<i class="fa fa-circle fa-stack-2x"></i>
+								<i class="fa fa-linkedin fa-stack-1x"></i>
+							</span>
+								</li>
+								<li>
+									<span class="fa-stack fa-lg">
+								<i class="fa fa-circle fa-stack-2x"></i>
+								<i class="fa fa-instagram fa-stack-1x"></i>
+							</span>
+								</li>
+							</ul>
+						</div>
+					</div> -->
+				</div>
+			</div>
+	</section>
+
+	<br><br>
+	<BR>
+	<BR>
+	<BR>
+	<BR>
+	<BR>
+
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
+	<link rel="stylesheet" href="css/main.min.css">
+	<script src="js/scripts.min.js"></script>
+
 </body>
+
 </html>
